--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "multipages",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Siksen-Sarutisuta.github.io/multipages",
+  "homepage": "https://Siksen-Sarutisuta.github.io/_multipages",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
